fix: gap between inputs and labels

--- a/styles/form.css
+++ b/styles/form.css
@@ -11,18 +11,18 @@ section#form-container header h1 {
 section#form-container header form {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
 }
 
 section#form-container header form div.inputs-wrapper {
     display: flex;
-    gap: 0.75rem;
+    gap: 0.5rem;
 }
 
 section#form-container header form div.label-input-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.25rem;
     flex: 1;
 }
 
@@ -38,14 +38,11 @@ section#form-container header form div.label-input-wrapper input {
     color: #AFABB6;
     padding: 0.75rem;
     font-size: 1rem;
-    /* height: 3rem; */
 }
 
 section#form-container header form div.label-input-wrapper input[type="date"],
 section#form-container header form div.label-input-wrapper input[type="time"] {
     display: block;
-    width: 100%;
-    appearance: none;
 }
 
 section#form-container header form div.label-input-wrapper input:focus {
@@ -62,4 +59,5 @@ section#form-container header form button[type="submit"] {
     font-weight: bold;
     color: #FBF9FE;
     cursor: pointer;
+    margin-top: 0.25rem;
 }
